--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-danger">
+        <nav class="navbar navbar-expand-lg nav" style="background-color:#a90533;">
             <div class="container-fluid">
                 <div>
                     <img src="./assets/logo.png" alt="Logo" width="100">
